Ajout emprunt et retour emprunt dans Service et ajout Controller